# wordle-on-demand

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
assets/: game_words.txt
assets/10_letters/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  r.txt  s.txt  t.txt  u.txt  w.txt  y.txt  z.txt  ó.txt  ć.txt  ł.txt  ś.txt  ż.txt
assets/11_letters/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  r.txt  s.txt  t.txt  u.txt  w.txt  y.txt  z.txt  ó.txt  ć.txt  ł.txt  ś.txt  ż.txt
assets/12_letters/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  r.txt  s.txt  t.txt  u.txt  w.txt  y.txt  z.txt  ó.txt  ć.txt  ł.txt  ś.txt  ź.txt  ż.txt
assets/13_letters/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  r.txt  s.txt  t.txt  u.txt  w.txt  y.txt  z.txt  ó.txt  ć.txt  ł.txt  ś.txt  ź.txt  ż.txt
assets/14_letters/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  r.txt  s.txt  t.txt  u.txt  w.txt  z.txt  ó.txt  ć.txt  ł.txt  ś.txt  ź.txt  ż.txt
assets/15_letters/: a.txt  b.txt  c.txt  d.txt  e.txt  (+22 more)
configuration/: base.yaml
migrations/: 20220909154411_create_games_table.sql  20220910091336_create_guesses_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  startup.rs  words.rs
tests/: health_check.rs
(+316 files in other folders)
