[package]
name = "wordle-on-demand"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.64"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde-aux = "4.0.0"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }